--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/WebAnwendung
-spring.datasource.username=root
-spring.datasource.password=Elli12Delos
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://20.113.27.134:3306/sys
+spring.datasource.username=sqladmin
+spring.datasource.password=qJcwO323T1YgO5
 spring.jpa.properties.hibernate.format_sql=true
